--- a/src/Try.Dotnet.Roslyn/Try.Dotnet.Roslyn.csproj
+++ b/src/Try.Dotnet.Roslyn/Try.Dotnet.Roslyn.csproj
@@ -2,7 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net471</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Reference Include="System.ServiceModel" />
+  </ItemGroup>
 
 </Project>
