--- a/src/Try.Dotnet.Roslyn/Try.Dotnet.Roslyn.csproj
+++ b/src/Try.Dotnet.Roslyn/Try.Dotnet.Roslyn.csproj
@@ -6,7 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="System.ServiceModel" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Sources\*.cs" CopyToOutputDirectory="Always" />
   </ItemGroup>
 
 </Project>
