--- a/src/Try.Dotnet.Roslyn/Try.Dotnet.Roslyn.csproj
+++ b/src/Try.Dotnet.Roslyn/Try.Dotnet.Roslyn.csproj
@@ -2,15 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net471</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="System.ServiceModel" />
   </ItemGroup>
 
   <ItemGroup>
